--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,24 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In / Sign Up</title>
-    <link rel="stylesheet" href="../public/style/login.css">
+    <link rel="stylesheet" href="/style/login.css">
 </head>
 <body>
+  
     <div class="auth-container">
         <div class="auth-card">
             <div class="user-icon-wrapper">
                 <div class="user-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.501 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.499-1.632z" />
-                    </svg>
+                    <img src="/img/logoInBlue.png" alt="Nexus Events Co. Logo">
                 </div>
             </div>
 
+            <div class="header-text">
+                <h1>Nexus</h1>
+                <h3>EVENTS CO.</h3>
+                
+            </div>
+
             <div id="signInForm">
-                <div class="header-text">
-                    <h1>Welcome back</h1>
-                    <p>Please sign in to continue</p>
-                </div>
+                <br>
+                <p>Please sign in to continue</p>
+                <br>
 
                 <form action="/signin" method="POST">
                     <div class="form-group">
@@ -56,7 +60,7 @@
                         <a href="/forgot-password" class="forgot-password">Forgot password?</a>
                     </div>
 
-                    <button type="submit" class="submit-btn">Sign In</button>
+                    <button type="submit" onclick="signInForm()" class="submit-btn">Sign In</button>
                 </form>
 
                 <div class="divider">
@@ -91,10 +95,11 @@
             </div>
 
             <div id="signUpForm" class="hidden">
-                <div class="header-text">
-                    <h1>Create account</h1>
+                
+                 <br>
                     <p>Please sign up to get started</p>
-                </div>
+                    <br>
+             
 
                 <form action="/signup" method="POST">
                     <div class="form-group">
@@ -130,33 +135,25 @@
                         </div>
                     </div>
 
+                    <div class="form-group">
+                        <div class="input-wrapper">
+                            <svg class="input-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 10.5V6.75a4.5 4.5 0 10-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 002.25-2.25v-6.75a2.25 2.25 0 00-2.25-2.25H6.75a2.25 2.25 0 00-2.25 2.25v6.75a2.25 2.25 0 002.25 2.25z" />
+                            </svg>
+                            <input type="password" name="password" id="signUpPassword" class="form-input" placeholder="confirm Password" required>
+                            <button type="button" class="toggle-password" onclick="togglePassword('signUpPassword')">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 010-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178z" />
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+                                </svg>
+                            </button>
+                        </div>
+                    </div>
+
                     <button type="submit" class="submit-btn" style="margin-top: 25px;">Sign Up</button>
                 </form>
 
-                <div class="divider">
-                    <span>OR CONTINUE WITH</span>
-                </div>
-
-                <div class="social-login">
-                    <button class="social-btn" onclick="socialLogin('google')">
-                        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" fill="#4285F4"/>
-                            <path d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z" fill="#34A853"/>
-                            <path d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z" fill="#FBBC05"/>
-                            <path d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z" fill="#EA4335"/>
-                        </svg>
-                    </button>
-                    <button class="social-btn" onclick="socialLogin('github')">
-                        <svg viewBox="0 0 24 24" fill="#333" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M12 2C6.477 2 2 6.477 2 12c0 4.42 2.865 8.17 6.839 9.49.5.092.682-.217.682-.482 0-.237-.008-.866-.013-1.7-2.782.603-3.369-1.34-3.369-1.34-.454-1.156-1.11-1.463-1.11-1.463-.908-.62.069-.608.069-.608 1.003.07 1.531 1.03 1.531 1.03.892 1.529 2.341 1.087 2.91.831.092-.646.35-1.086.636-1.336-2.22-.253-4.555-1.11-4.555-4.943 0-1.091.39-1.984 1.029-2.683-.103-.253-.446-1.27.098-2.647 0 0 .84-.269 2.75 1.025A9.578 9.578 0 0112 6.836c.85.004 1.705.114 2.504.336 1.909-1.294 2.747-1.025 2.747-1.025.546 1.377.203 2.394.1 2.647.64.699 1.028 1.592 1.028 2.683 0 3.842-2.339 4.687-4.566 4.935.359.309.678.919.678 1.852 0 1.336-.012 2.415-.012 2.743 0 .267.18.578.688.48C19.138 20.167 22 16.418 22 12c0-5.523-4.477-10-10-10z"/>
-                        </svg>
-                    </button>
-                    <button class="social-btn" onclick="socialLogin('twitter')">
-                        <svg viewBox="0 0 24 24" fill="#1DA1F2" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"/>
-                        </svg>
-                    </button>
-                </div>
+                
 
                 <div class="toggle-auth">
                     Already have an account?
@@ -188,6 +185,10 @@
 
         function socialLogin(provider) {
             alert('Social login with ' + provider + ' coming soon!');
+        }
+
+        function signInForm(){
+            alert('Sign In functionality coming soon!');
         }
     </script>
 </body>
