--- a/public/style/home.css
+++ b/public/style/home.css
@@ -118,19 +118,33 @@ header {
     border-color: #333;
 }
 
-.btn-search {
+.btn-search{
     padding: 12px 25px;
     background: #333;
     color: white;
     border: none;
     border-radius: 10px;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 18px;
     font-weight: 600;
     transition: all 0.3s ease;
 }
 
-.btn-search:hover {
+.user-info {
+    padding: 3px 20px;
+    background: #333;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 15px;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    transition: all 0.3s ease;
+}
+
+.btn-search:hover, .user-info:hover {
     background: #555;
     transform: translateY(-2px);
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.15);
