--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,9 +30,34 @@
             </div>
 
             <div class="header-actions">
-                <button class="btn btn-signup" onclick="handleSignup()">Sign Up</button>
+                <% if (user) { %>
+                    <!-- User is signed in: show About Me logo and user name -->
+                    <div class="user-info" onclick="userInfo()">
+                        <svg class="userLogo" width="40" height="40" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+                            <!-- Simple person icon -->
+                            <g fill="#6b7280">
+                                <!-- Head -->
+                                <circle cx="20" cy="14" r="5" />
+
+                                <!-- Body -->
+                                <path d="M 20 20 C 14 20 10 23 10 28 L 10 30 L 30 30 L 30 28 C 30 23 26 20 20 20 Z" />
+                            </g>
+                        </svg>
+                        <span class="user-name"><%= user.name %></span>
+                    </div>
+                    
+                    <% } else { %>
+                        <!-- User NOT signed in: show Sign Up and Add Event buttons -->
+                        <button class="btn btn-signup" onclick="handleSignup()">Sign Up</button>
+
+                        <% } %>
+
+            </div>
+
+            <div id="addEventSection" class="header-actions">
                 <button class="btn btn-add-event" onclick="handleAddEvent()">+ Add New Event</button>
             </div>
+
         </header>
 
         <!-- Events Section -->
@@ -75,7 +100,7 @@
                 const response = await fetch('/login', {
                     method: 'GET',
                 });
-                
+
                 if (response.ok) {
                     window.location.href = response.url;
                 } else {
@@ -85,8 +110,8 @@
                 console.error('Error during Google Sign-In:', error);
                 alert('An error occurred. Please try again later.');
             }
-            
-            
+
+
         }
 
         function handleAddEvent() {
@@ -111,6 +136,9 @@
             if (foundCount === 0 && searchTerm !== '') {
                 alert('No events found matching your search.');
             }
+        }
+        function userInfo() {
+            
         }
 
         // Allow search on Enter key
