Event schema modified

--- a/views/addEvent.ejs
+++ b/views/addEvent.ejs
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <!-- Header -->
-        <header>
+        <header class="header">
             <div class="header-content">
                 <div class="logo-section">
                     <img src="/img/logo.png" alt="Nexus Events Logo" class="logo">
@@ -21,7 +21,7 @@
                     </div>
                 </div>
 
-                <a href="#" class="back-link" onclick="goBack()">← Back to Events</a>
+                <div href="#" class="back-link" onclick="goBack()">← Back to Events</div>
             </div>
         </header>
 
